@@ -1,3 +1,10 @@
+2015-10-20  Mark Wielaard  <mjw@redhat.com>
+
+	* readelf.c (options): Expand -z help text.
+	(dump_data_section): Check whether we need and can decompress section
+	data and call elf_rawzdata if so,
+	(print_string_section): Likewise.
+
 2015-10-16  Mark Wielaard  <mjw@redhat.com>
 
 	* readelf.c (argp_option): Describe --decompress,-z.
